--- a/backend/.example.env
+++ b/backend/.example.env
@@ -1,5 +1,5 @@
-DB_HOST=localhost
+DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=
-DB_USERNAME=
-DB_PASSWORD=
+DB_DATABASE=simplesvet
+DB_USERNAME=root
+DB_PASSWORD=root
